Fixed a major bug which resulted in incorrect output matrix dimensions as well as fixed an issue with formatting